--- a/templates/params.html
+++ b/templates/params.html
@@ -10,6 +10,10 @@
 <body>
     <h1>Parameters is {{ id }}</h1>
 
+    {% for i in id %}
+    <h5>{{ i }}</h5>
+    {% endfor %}
+
 </body>
 
 </html>
