🔒️ Filter dict from user inputed issues fixed

--- a/templates/params.html
+++ b/templates/params.html
@@ -8,11 +8,13 @@
 </head>
 
 <body>
-    <h1>Parameters is {{ id }}</h1>
 
-    {% for i in id %}
-    <h5>{{ i }}</h5>
-    {% endfor %}
+    <h3>{{ id }}</h3>
+
+    <h1>Welcome {{ data.name }}</h1>
+
+    <!-- <h1>{{ forloop.counter }}</h1> -->
+
 
 </body>
 
