--- a/templates/params.html
+++ b/templates/params.html
@@ -13,7 +13,7 @@
 
     <h1>Welcome {{ data.name }}</h1>
 
-    <!-- <h1>{{ forloop.counter }}</h1> -->
+    <h1>{{ forloop.counter }}</h1> 
 
 
 </body>
